add notebooks, images, saved models

--- a/svm_model.ipynb
+++ b/svm_model.ipynb
@@ -6,6 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Update sklearn to prevent version mismatches\n",
+    "!conda install scikit-learn\n",
+    "!conda update scikit-learn\n",
+    "!conda install joblib \n",
+    "!conda update joblib "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# SVM - Support Vector Machine \n",
     "\n",
     "import pandas as pd"
