--- a/logistic_regression_model.ipynb
+++ b/logistic_regression_model.ipynb
@@ -629,7 +629,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "param_grid = {'C': [1, 5, 10],\n",
+    "param_grid = {'C': [1, 6, 10],\n",
     "              'penalty': [\"l1\", \"l2\"]}\n",
     "grid = GridSearchCV(model, param_grid, verbose=3)"
    ]
@@ -639,6 +639,26 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:552: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 531, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1304, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "  File \"C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 443, in _check_solver\n",
+      "    \"got %s penalty.\" % (solver, penalty))\n",
+      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got l1 penalty.\n",
+      "\n",
+      "  FitFailedWarning)\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -661,20 +681,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:552: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 531, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1304, in fit\n",
-      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
-      "  File \"C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 443, in _check_solver\n",
-      "    \"got %s penalty.\" % (solver, penalty))\n",
-      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got l1 penalty.\n",
-      "\n",
-      "  FitFailedWarning)\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n",
       "C:\\Users\\Ivy\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -789,17 +795,17 @@
      "output_type": "stream",
      "text": [
       "[CV] ..................... C=1, penalty=l2, score=0.571, total=   0.4s\n",
-      "[CV] C=5, penalty=l1 .................................................\n",
-      "[CV] ....................... C=5, penalty=l1, score=nan, total=   0.0s\n",
-      "[CV] C=5, penalty=l1 .................................................\n",
-      "[CV] ....................... C=5, penalty=l1, score=nan, total=   0.0s\n",
-      "[CV] C=5, penalty=l1 .................................................\n",
-      "[CV] ....................... C=5, penalty=l1, score=nan, total=   0.0s\n",
-      "[CV] C=5, penalty=l1 .................................................\n",
-      "[CV] ....................... C=5, penalty=l1, score=nan, total=   0.0s\n",
-      "[CV] C=5, penalty=l1 .................................................\n",
-      "[CV] ....................... C=5, penalty=l1, score=nan, total=   0.0s\n",
-      "[CV] C=5, penalty=l2 .................................................\n"
+      "[CV] C=6, penalty=l1 .................................................\n",
+      "[CV] ....................... C=6, penalty=l1, score=nan, total=   0.0s\n",
+      "[CV] C=6, penalty=l1 .................................................\n",
+      "[CV] ....................... C=6, penalty=l1, score=nan, total=   0.0s\n",
+      "[CV] C=6, penalty=l1 .................................................\n",
+      "[CV] ....................... C=6, penalty=l1, score=nan, total=   0.0s\n",
+      "[CV] C=6, penalty=l1 .................................................\n",
+      "[CV] ....................... C=6, penalty=l1, score=nan, total=   0.0s\n",
+      "[CV] C=6, penalty=l1 .................................................\n",
+      "[CV] ....................... C=6, penalty=l1, score=nan, total=   0.0s\n",
+      "[CV] C=6, penalty=l2 .................................................\n"
      ]
     },
     {
@@ -820,8 +826,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.606, total=   0.4s\n",
-      "[CV] C=5, penalty=l2 .................................................\n"
+      "[CV] ..................... C=6, penalty=l2, score=0.614, total=   0.5s\n",
+      "[CV] C=6, penalty=l2 .................................................\n"
      ]
     },
     {
@@ -842,8 +848,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.634, total=   0.5s\n",
-      "[CV] C=5, penalty=l2 .................................................\n"
+      "[CV] ..................... C=6, penalty=l2, score=0.642, total=   0.4s\n",
+      "[CV] C=6, penalty=l2 .................................................\n"
      ]
     },
     {
@@ -864,8 +870,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.627, total=   0.5s\n",
-      "[CV] C=5, penalty=l2 .................................................\n"
+      "[CV] ..................... C=6, penalty=l2, score=0.622, total=   0.5s\n",
+      "[CV] C=6, penalty=l2 .................................................\n"
      ]
     },
     {
@@ -886,8 +892,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.640, total=   0.5s\n",
-      "[CV] C=5, penalty=l2 .................................................\n"
+      "[CV] ..................... C=6, penalty=l2, score=0.643, total=   0.5s\n",
+      "[CV] C=6, penalty=l2 .................................................\n"
      ]
     },
     {
@@ -919,7 +925,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=5, penalty=l2, score=0.624, total=   0.4s\n",
+      "[CV] ..................... C=6, penalty=l2, score=0.632, total=   0.4s\n",
       "[CV] C=10, penalty=l1 ................................................\n",
       "[CV] ...................... C=10, penalty=l1, score=nan, total=   0.0s\n",
       "[CV] C=10, penalty=l1 ................................................\n",
@@ -973,7 +979,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] .................... C=10, penalty=l2, score=0.634, total=   0.5s\n",
+      "[CV] .................... C=10, penalty=l2, score=0.634, total=   0.4s\n",
       "[CV] C=10, penalty=l2 ................................................\n"
      ]
     },
@@ -1033,7 +1039,7 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n",
-      "[Parallel(n_jobs=1)]: Done  30 out of  30 | elapsed:    7.1s finished\n"
+      "[Parallel(n_jobs=1)]: Done  30 out of  30 | elapsed:    6.8s finished\n"
      ]
     },
     {
@@ -1061,7 +1067,7 @@
      "data": {
       "text/plain": [
        "GridSearchCV(estimator=LogisticRegression(),\n",
-       "             param_grid={'C': [1, 5, 10], 'penalty': ['l1', 'l2']}, verbose=3)"
+       "             param_grid={'C': [1, 6, 10], 'penalty': ['l1', 'l2']}, verbose=3)"
       ]
      },
      "execution_count": 10,
@@ -1082,8 +1088,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C': 5, 'penalty': 'l2'}\n",
-      "0.6263611654865775\n"
+      "{'C': 6, 'penalty': 'l2'}\n",
+      "0.6303669798208399\n"
      ]
     }
    ],
